FE fix landing page spacing

--- a/frontend/js/styles/Home.css
+++ b/frontend/js/styles/Home.css
@@ -144,7 +144,7 @@ a:visited {
 
 .seasonal-produce-section {
   width: 100%;
-  height: 600px;
+  height: 650px;
   text-align: center;
   background-color: #e2d7c3;
   padding-top: 20px;
